  * Added support for PKCE
  * Added support for public clients
  * Fixed a bug where it was possible to display issuer urls that only differ
    in the trayling slash twice when using oidc-gen
  * Enforce usage of openid and offline_access scope in all cases

  [ Gabriel Zachmann ]
  * Improve error message when necessary scopes cannot be registered during
    dynamic client registration
  * If necessary scopes cannot be registered during dynamic client
    registration, a public client is tried
  * Fixed memory leaks
  * Allow updating of public clients by using the -m and --pub option

  [ Gabriel Zachmann ]
  * Added public client for aai.egi.eu

  [ Gabriel Zachmann ]
  * Added environment variable to manually specify the oidc-agent config
    directory location
  * Added option to manually specify the used redirect port during dynamic
    client registration

  [ Gabriel Zachmann ]
  * Fixed file locations when using a custom oidcdir (through env var) and the
    path value did not have a trailing slash
  * Fixed a possible seg fault 

  [ Gabriel Zachmann ]
  * Changed the fundamental architecture by introducing a new proxy daemon
  * Now an account config can be updated by oidc-agent, i.e. when a provider
    issues a new refresh token
  * oidc-agent can manage the encryption password: store encrypted in memory,
    use keyring, use user provided command, or prompt the user
  * Add autoload possibility. If an application requests an access token for a
    not loaded config, it is automatically loaded, if the user allows it.
  * Add possibility that each usage of an account configuration has to be
    confirmed by the user. Can be turned of by using oidc-add -c or oidc-agent
    -c
  * Changed the oidc-agent console module flag from -c to -d
  * Fixed memory leak 
  * Changed the default port for redirect urls when using dynamic client
    registration from 2912 to 4242 
  * 

 -- Marcus Hardt <hardt@kit.edu>  Wed, 13 Feb 2019 07:41:02 +0100